--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "express-cli",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "license": "MIT",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
     "@types/express": "^4.17.6",
-    "express": "^4.17.1"
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "express": "~4.16.0",
+    "http-errors": "~1.6.2",
+    "morgan": "~1.9.0"
   }
 }
