--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "ts-node ./bin/www"
   },
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/node": "^13.13.4",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "ts-node": "^8.10.1"
+  },
+  "devDependencies": {
+    "typescript": "^3.8.3"
   }
 }
